# a2a-python

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  a2a.json  development.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/spelling/: allow.txt  excludes.txt  expect.txt  line_forbidden.patterns
.github/linters/: .jscpd.json  .mypy.ini
.github/workflows/: linter.yaml  python-publish.yml  spelling.yaml  stale.yaml  unit-tests.yml  update-a2a-types.yml
docker/postgres/: docker-compose.yml  init.sql
examples/google_adk/birthday_planner/: __main__.py
examples/google_adk/calendar_agent/: __main__.py
examples/helloworld/: __main__.py
examples/langgraph/: __main__.py
src/a2a/: types.py
src/a2a/auth/: user.py
src/a2a/client/: __init__.py  client.py  errors.py  helpers.py
src/a2a/server/: __init__.py  agent_executor.py  agent_proxy.py  app.py  context.py  errors.py  models.py  request_handler.py  server.py  sse_response_queue.py  streaming_response_queue.py  task_store.py
src/a2a/server/agent_execution/: __init__.py  agent_executor.py  base_agent_executor.py  context.py  request_context_builder.py  simple_request_context_builder.py
src/a2a/server/apps/: __init__.py  http_app.py  starlette_app.py
src/a2a/server/events/: __init__.py  event_consumer.py  event_queue.py  in_memory_queue_manager.py  queue_manager.py
src/a2a/server/request_handlers/: __init__.py  default_request_handler.py  jsonrpc_handler.py  request_handler.py  response_helpers.py
src/a2a/server/tasks/: __init__.py  database_task_store.py  inmemory_push_notifier.py  inmemory_task_store.py  postgresql_task_store.py  push_notifier.py  result_aggregator.py  task_manager.py  task_store.py  task_updater.py
src/a2a/utils/: __init__.py  artifact.py  errors.py  helpers.py  message.py  task.py  telemetry.py
tests/: README.md  test_types.py
tests/client/: test_client.py  test_errors.py
tests/server/: test_integration.py
tests/server/agent_execution/: test_context.py
tests/server/events/: test_event_consumer.py  test_event_queue.py  test_inmemory_queue_manager.py
tests/server/request_handlers/: test_jsonrpc_handler.py
tests/server/tasks/: test_database_task_store.py  test_inmemory_task_store.py  test_postgresql_task_store.py  test_task_manager.py  test_task_updater.py
tests/utils/: test_helpers.py  test_message.py  test_telemetry.py
